--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "googleapis": "^105.0.0",
+    "framer-motion": "^12.18.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
